bump over a bit to avoid covering timestamp

--- a/static/css/lierc.css
+++ b/static/css/lierc.css
@@ -1863,7 +1863,7 @@ p.embed-source {
 .message-controls {
   position: absolute;
   top: 2px;
-  right: 39px;
+  right: 42px;
   padding: 2px;
   font-size: 15px;
   line-height: 15px;
